# my_cobot_pro

./: README.md  package.xml  setup.cfg  setup.py
camera/: black_line_border_crop.py  black_line_detect.py  black_line_detect_m.py  camera_node.py  line_detect.py
config/: firefighter.srdf  firefighter.urdf.xacro  moveit_controllers.yaml  mycobot_pro_600.srdf
data/: joint_trajectory_log.json
dataset/__MACOSX/black line detection.v2i.yolov8-obb/: ._data.yaml
dataset/black line detection.v2i.yolov8-obb/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/black line detection.v2i.yolov8-obb/test/labels/: rotated_rect_043_png.rf.81854ff1ff965736fcb46f26ba54f74d.txt  rotated_rect_049_png.rf.c0f6f9e4218a79dfc9f6267780016c34.txt
dataset/black line detection.v2i.yolov8-obb/train/labels/: rotated_rect_000_png.rf.2c6afd2141d7a7e5f06e854798641d6a.txt  rotated_rect_000_png.rf.791953ffbbe69d14eda9bebd9fa14dae.txt  rotated_rect_000_png.rf.92495cc733f384b9ab0df05f09d6c18d.txt  rotated_rect_001_png.rf.81dc142028f49ead0222169fc4d42235.txt  rotated_rect_001_png.rf.a859046e7baaecb169c8e0545b74ea07.txt  rotated_rect_001_png.rf.d851e9d4c2a7fe15ba10df4492f4bc19.txt  rotated_rect_002_png.rf.16c033b0804d47a11659bf2162d19034.txt  rotated_rect_002_png.rf.30e242766d40a0a45d5d08c2c4c9d5b4.txt  rotated_rect_002_png.rf.a0bf945cce051378151c821354b2f461.txt  rotated_rect_003_png.rf.05aeecd5b6c8d5f31b47a9b0f0ae7a6a.txt  rotated_rect_003_png.rf.84d621cec2c4f9ca98002b6f8eedd51d.txt  rotated_rect_003_png.rf.eaac63ee1a7fb2240e1e884632f42547.txt  rotated_rect_004_png.rf.667426e94e07efab44016ef6d448af78.txt  rotated_rect_004_png.rf.9f323fce2b5283f53ee7f91d1d5f1243.txt  rotated_rect_004_png.rf.dd7369aa2ef5dfe3054502ba030dbae3.txt  rotated_rect_005_png.rf.0fa68022f52ec615def787d44757af5c.txt  rotated_rect_005_png.rf.2c531eabf0e1690a156759c6669bfdf2.txt  rotated_rect_005_png.rf.83e84dafc67e8e3a891a8d4a16d82c06.txt  rotated_rect_006_png.rf.4462d8f2a55672647066b27867eb7a52.txt  rotated_rect_006_png.rf.741ae2b93b2be2e433dd7508cd578625.txt  rotated_rect_006_png.rf.fb1a46a89ef804c88358126796aac660.txt  rotated_rect_007_png.rf.2fc7fdd0bf0ffeb5043c0d0b5922d8b9.txt  rotated_rect_007_png.rf.b6c9cdd588d82922d0092a11a121234a.txt  rotated_rect_007_png.rf.e798d76d7d1d2fd4049273fac14409e7.txt  rotated_rect_008_png.rf.1fcf5c94e97bb9d51c54953373130837.txt  rotated_rect_008_png.rf.5e1f2447d071fdbf45750e4ae48012a7.txt  rotated_rect_008_png.rf.8f25ca8302d4655356aef86cb1204707.txt  rotated_rect_009_png.rf.4c961f7313a0a04b8d9ed20ab529fa07.txt  rotated_rect_009_png.rf.884edfd36a48272d94768e8efed35b2c.txt  rotated_rect_009_png.rf.cb4a724e28f1fe8169af08b12517b309.txt  rotated_rect_010_png.rf.23fa8d0379ad856ab5ec5b682a6b73dd.txt  rotated_rect_010_png.rf.5bd3767775ef972fbc570b62986bf0a7.txt  rotated_rect_010_png.rf.7063f313d83b441c7bb0c73476efe920.txt  rotated_rect_011_png.rf.1f7a13b344ef3c3e7ea1a5d5eb7f498e.txt  rotated_rect_011_png.rf.2b213dcd293790e50e66a3ab33705ff2.txt  rotated_rect_011_png.rf.428b8f2115e6bdeea74951d3d6415814.txt  rotated_rect_012_png.rf.0188aefac3ba1a78e2982d2a1c836d88.txt  rotated_rect_012_png.rf.49d09e42ac95d8381f5be5ee1692538b.txt  rotated_rect_012_png.rf.4ed87595519428805278ad4e6d73a52e.txt  rotated_rect_013_png.rf.0215bfa6dab7d765bff03d1914b80cc8.txt  (+94 more)
dataset/black line detection.v2i.yolov8-obb/valid/labels/: rotated_rect_017_png.rf.997280c82a5f93fa818696299f66cafd.txt  rotated_rect_030_png.rf.e7bf0f32368f5b7b6e3a6c8a016a84e2.txt  rotated_rect_035_png.rf.629c956f5607cbac72db23f0d7706219.txt
deploy/: tcp_control.py
launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  slider_control.launch.py  spawn_controllers.launch.py  test.launch.py
scripts/: ground_plane_interference.py  ik.py  ik_advanced.py  ik_crop_pub_joints.py  ik_final_dt.py  ik_final_tcp.py  ik_fixed_ee.py  ik_fixed_ee_workspace_transform.py  latest.py  latytest.py  new.py  waypoints_camera_ik.py  workspace_ik.py
urdf/: mycobot_pro_600.urdf
