<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cobot_pro</name>
  <version>0.0.1</version>
  <description>ROS 2 package for MyCobot Pro</description>
  <maintainer email="aldrininbaraj@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core Python Dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <!-- Visualization / Robot Description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <!-- MoveIt -->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>moveit_setup_assistant</depend>

  <!-- Simulation -->
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>gazebo_ros_control</depend>

  <!-- Optional: comment this if not available -->
  <!-- <depend>warehouse_ros_mongo</depend> -->

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Use one <export> tag -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
